<resources>
    <string name="app_name">BotController</string>
    <string name="FWD">Button</string>
    <string name="BWD">Button</string>
    <string name="manual">MANUAL</string>
    <string name="auto">AUTO</string>
    <string name="GRIPPER">GRIPPER</string>
    <string name="BACKWARD">BACKWARD</string>
    <string name="FORWARD">FORWARD</string>
    <string name="MUP">MIDDLE UP</string>
    <string name="MDOWN">MIDDLE DOWN</string>
    <string name="gripper_released">GRIPPER RELEASED</string>
    <string name="gripper_activated">GRIPPER ACTIVATED</string>
    <string name="control_gripper">controlgripper</string>
    <string name="BUP">BACK UP</string>
    <string name="BDOWN">BACK DOWN</string>
    <string name="control_auto">controlauto</string>
    <string name="power">BT</string>
    <string name="bt">BT</string>
    <string name="FUP">FRONT UP</string>
    <string name="FDOWN">FRONT DOWN</string>
    <string name="discoverable">Discoverable</string>
    <string name="discover">DISCOVER</string>
    <string name="connect">CONNECT</string>
</resources>